Add repeatCount for alerts
